Adding more examples, sample data for streaming, etc

--- a/binaryjs/audio.html
+++ b/binaryjs/audio.html
@@ -5,7 +5,8 @@
     <title>BinaryJS tests</title>
   </head>
   <body>
-    <audio autoplay></audio>
+    <div id="progress" align="center">0% complete</div>
+    <div id="data-dump"></div>
     <script src="http://cdn.binaryjs.com/0/binary.js"></script>
     <script src="audio.js"></script>
   </body>
